# MedicsApi

./: .dockerignore  Dockerfile  LICENSE  main.py  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci-cd.yml
db/: db.py
entities/: appointment.py  doctor.py  user.py
schemas/: appointment.py  available_appointment.py  booking.py  doctor.py  user_appointment.py
tests/: conftest.py  test_appointment_entity.py  test_doctor_entity.py  test_main.py  test_user_entity.py
