[project]
name = "medicsapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.42",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.35.0",
    "pytest>=8.3.2",
    "httpx>=0.27.0",
    "cryptography>=42.0.8",
]
